feat(rest): enhance taxonomy term creation with improved validation and existence checks
Added blank check for clientTerm name in addTaxonomyTerm method
Added required check for taxonomy and taxonomyName, returning bad request if missing
Modified existence check to use eitherTermNameOrSlugExists with enforceTaxonomyMatch set to true
In non-existence case, added term and re-checked existence with enforceTaxonomyMatch true before returning success
Updated response construction to use convertToClientTerm on the new term and throw if absent